--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,10 @@ table {
     border-width: 3px;
     border-style: solid;
     border-spacing: 0;
-    margin: 70px auto;
-    width: 75%;
+    margin: 30px auto;
+    width: 70%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 0.9em;
     text-align: center;
 }
 
@@ -33,7 +35,7 @@ table {
 }
 
 th, td {
-    padding: 4px;
+    padding: 4.5px;
     width: 18%;
 }
 
