--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     Assignment: "My Schedule"
     Sarah Pasquale
         
-    FileName: style.css
+    FileName: styles.css
     Last updated 10/26/2024
 
     ====================================
